public/core/v0.10/_sources/reference/tmlt/core/measurements/aggregations/index.rst.txt



*******************
aggregations
*******************

.. py:module:: tmlt.core.measurements.aggregations

.. autoapi-nested-parse::

   Derived measurements for computing noisy aggregates on spark DataFrames.











Functions
=========

.. list-table::

   * - :func:`.create_count_measurement`
     - Returns a noisy count measurement.
   * - :func:`.create_count_distinct_measurement`
     - Returns a noisy count_distinct measurement.
   * - :func:`.create_sum_measurement`
     - Returns a noisy sum measurement.
   * - :func:`.create_average_measurement`
     - Returns a noisy average measurement.
   * - :func:`.create_variance_measurement`
     - Returns a noisy variance measurement.
   * - :func:`.create_standard_deviation_measurement`
     - Returns a noisy standard deviation measurement.
   * - :func:`.create_quantile_measurement`
     - Returns a noisy quantile measurement.
   * - :func:`.get_midpoint`
     - Returns the midpoint of lower and upper.
   * - :func:`.create_partition_selection_measurement`
     - Returns a partition selection measurement.
   * - :func:`.create_bound_selection_measurement`
     - Returns a bound selection measurement.

.. py:function:: create_count_measurement(input_domain, input_metric, output_measure, d_out, noise_mechanism, d_in = 1, groupby_transformation = None, count_column = None)

   Returns a noisy count measurement.

   This function constructs a measurement M with the following privacy contract -
   for any two inputs x, x' that are `d_in`-close under the `input_metric`, M(x) and
   M(x') are sampled from distributions that are `d_out` apart under the
   `output_measure`. Noise scale is computed appropriately for the specified
   `noise_mechanism` such that the stated privacy property is guaranteed.

   .. note::

      `d_out` is interpreted as the "epsilon" parameter if `output_measure` is
      :class:`~.PureDP`, the "rho" parameter if `output_measure` is
      :class:`~.RhoZCDP`, and ("epsilon", "delta") if `output_measure` is
      :class:`~.ApproxDP`.

   .. note:: :class:`~.ApproxDP` budgets with delta>0 are not yet supported.

   :param input_domain: Domain of input spark DataFrames.
   :param input_metric: Distance metric on input DataFrames.
   :param output_measure: Desired privacy guarantee (one of :class:`~.PureDP`,
                          :class:`~.RhoZCDP`, or :class:`~.ApproxDP`).
   :param d_out: Desired distance between output distributions w.r.t. `d_in`. This is
                 interpreted as "epsilon" if output_measure is :class:`~.PureDP`, "rho" if it
                 is :class:`~.RhoZCDP`, and ("epsilon", "delta") if it is
                 :class:`~.ApproxDP`.
   :param noise_mechanism: Noise mechanism to apply to count(s).
   :param d_in: Distance between inputs under the `input_metric`. The returned
                measurement is guaranteed to have output distributions that are `d_out`
                apart for inputs that are `d_in` apart. Defaults to 1.
   :param groupby_transformation: If provided, this measurement returns a DataFrame with
                                  noisy counts for each group obtained by applying the groupby transformation
                                  . Otherwise, this measurement outputs a single number - the noisy count.
   :param count_column: If a `groupby_transformation` is provided, this is the column
                        name to be used for counts in the dataframe output by the measurement. If
                        None, this column will be named "count".



.. py:function:: create_count_distinct_measurement(input_domain, input_metric, output_measure, d_out, noise_mechanism, d_in = 1, groupby_transformation = None, count_column = None)

   Returns a noisy count_distinct measurement.

   This function constructs a measurement M with the following privacy contract -
   for any two inputs x, x' that are `d_in`-close under the `input_metric`,
   M(x) and M(x') are sampled from distributions that are `d_out` apart
   under the `output_measure`. Noise scale is computed appropriately for the
   specified `noise_mechanism` such that the stated privacy property
   is guaranteed.

   .. note::

      `d_out` is interpreted as the "epsilon" parameter if `output_measure` is
      :class:`~.PureDP`, the "rho" parameter if `output_measure` is
      :class:`~.RhoZCDP`, and ("epsilon", "delta") if `output_measure` is
      :class:`~.ApproxDP`.

   .. note:: :class:`~.ApproxDP` budgets with delta>0 are not yet supported.

   :param input_domain: Domain of input spark DataFrames.
   :param input_metric: Distance metric on input DataFrames.
   :param output_measure: Desired privacy guarantee (one of :class:`~.PureDP`,
                          :class:`~.RhoZCDP`, or :class:`~.ApproxDP`).
   :param d_out: Desired distance between output distributions w.r.t. `d_in`. This is
                 interpreted as "epsilon" if output_measure is :class:`~.PureDP`, "rho" if it
                 is :class:`~.RhoZCDP`, and ("epsilon", "delta") if it is
                 :class:`~.ApproxDP`.
   :param noise_mechanism: Noise mechanism to apply to count(s).
   :param d_in: Distance between inputs under the `input_metric`. The returned
                measurement is guaranteed to have output distributions that are
                `d_out` apart for inputs that are `d_in` apart. Defaults to 1.
   :param groupby_transformation: If provided, this measurement returns a DataFrame
                                  with noisy counts for each group obtained by applying the groupby
                                  transformation. Otherwise, this measurement outputs a single number -
                                  the noisy count of distinct items.
   :param count_column: If a `groupby_transformation` is provided, this is the
                        column name to be used for counts in the dataframe output by the
                        measurement. If None, this column will be named "count".



.. py:function:: create_sum_measurement(input_domain, input_metric, output_measure, d_out, noise_mechanism, measure_column, lower, upper, d_in = 1, groupby_transformation = None, sum_column = None)

   Returns a noisy sum measurement.

   This function constructs a measurement M with the following privacy contract -
   for any two inputs x, x' that are `d_in`-close under the `input_metric`, M(x) and
   M(x') are sampled from distributions that are `d_out` apart under the
   `output_measure`. Noise scale is computed appropriately for the specified
   `noise_mechanism` such that the stated privacy property is guaranteed.

   .. note::

      `d_out` is interpreted as the "epsilon" parameter if `output_measure` is
      :class:`~.PureDP`, the "rho" parameter if `output_measure` is
      :class:`~.RhoZCDP`, and ("epsilon", "delta") if `output_measure` is
      :class:`~.ApproxDP`.

   .. note:: :class:`~.ApproxDP` budgets with delta>0 are not yet supported.

   :param input_domain: Domain of input spark DataFrames.
   :param input_metric: Distance metric on input DataFrames.
   :param output_measure: Desired privacy guarantee (one of :class:`~.PureDP`,
                          :class:`~.RhoZCDP`, or :class:`~.ApproxDP`).
   :param d_out: Desired distance between output distributions w.r.t. `d_in`. This is
                 interpreted as "epsilon" if output_measure is :class:`~.PureDP`, "rho" if it
                 is :class:`~.RhoZCDP`, and ("epsilon", "delta") if it is
                 :class:`~.ApproxDP`.
   :param noise_mechanism: Noise mechanism to be applied to the sum(s).
   :param measure_column: Column to be summed.
   :param lower: Lower clipping bound on `measure_column`.
   :param upper: Upper clipping bound on `measure_column`.
   :param d_in: Distance between inputs under the `input_metric`. The returned
                measurement is guaranteed to have output distributions that are `d_out`
                apart for inputs that are `d_in` apart. Defaults to 1.
   :param groupby_transformation: If provided, this measurement returns a DataFrame with
                                  noisy sums for each group obtained by applying the groupby transformation.
                                  If None, this measurement outputs a single number - the noisy sum.
   :param sum_column: If a `groupby_transformation` is supplied, this is the column
                      name to be used for sums in the DataFrame output by the measurement. If
                      None, this column will be named "sum(<measure_column>)".



.. py:function:: create_average_measurement(input_domain, input_metric, output_measure, d_out, noise_mechanism, measure_column, lower, upper, d_in = 1, groupby_transformation = None, average_column = None, keep_intermediates = False, sum_column = None, count_column = None)

   Returns a noisy average measurement.

   This function constructs a measurement M with the following privacy contract -
   for any two inputs x, x' that are `d_in`-close under the `input_metric`, M(x) and
   M(x') are sampled from distributions that are `d_out` apart under the
   `output_measure`. Noise scale is computed appropriately for the specified
   `noise_mechanism` such that the stated privacy property is guaranteed.

   .. note::

      `d_out` is interpreted as the "epsilon" parameter if `output_measure` is
      :class:`~.PureDP`, the "rho" parameter if `output_measure` is
      :class:`~.RhoZCDP`, and ("epsilon", "delta") if `output_measure` is
      :class:`~.ApproxDP`.

   .. note:: :class:`~.ApproxDP` budgets with delta>0 are not yet supported.

   :param input_domain: Domain of input DataFrames.
   :param input_metric: Distance metric on input DataFrames.
   :param output_measure: Desired privacy guarantee (one of :class:`~.PureDP`,
                          :class:`~.RhoZCDP`, or :class:`~.ApproxDP`).
   :param d_out: Desired distance between output distributions w.r.t. `d_in`. This is
                 interpreted as "epsilon" if output_measure is :class:`~.PureDP`, "rho" if it
                 is :class:`~.RhoZCDP`, and ("epsilon", "delta") if it is
                 :class:`~.ApproxDP`.
   :param noise_mechanism: Noise mechanism to apply.
   :param measure_column: Name to column to compute average of.
   :param lower: Lower clipping bound for `measure_column`.
   :param upper: Upper clipping bound for `measure_column`.
   :param d_in: Distance between inputs under the `input_metric`. The returned
                measurement is guaranteed to have output distributions that are `d_out`
                apart for inputs that are `d_in` apart. Defaults to 1.
   :param groupby_transformation: If provided, this measurement returns a DataFrame with
                                  noisy averages for each group obtained from the groupby transformation.
                                  If None, this measurement outputs a single number - the noisy average.
   :param average_column: If a `groupby_transformation` is supplied, this is the column
                          name to be used for noisy average in the DataFrame output by the
                          measurement. If None, this column will be named "avg(<measure_column>)".
   :param keep_intermediates: If True, intermediates (noisy sum of deviations and noisy
                              count) will also be output in addition to the noisy average.
   :param sum_column: If a `groupby_transformation` is supplied and `keep_intermediates`
                      is True, this is the column name to be used for intermediate sums in the
                      DataFrame output by the measurement. If None, this column will be named
                      "sum(<measure_column>)".
   :param count_column: If a `groupby_transformation` is supplied and `keep_intermediates`
                        is True, this is the column name to be used for intermediate counts in the
                        DataFrame output by the measurement. If None, this column will be named
                        "count".



.. py:function:: create_variance_measurement(input_domain, input_metric, output_measure, d_out, noise_mechanism, measure_column, lower, upper, d_in = 1, groupby_transformation = None, variance_column = None, keep_intermediates = False, sum_of_deviations_column = None, sum_of_squared_deviations_column = None, count_column = None)

   Returns a noisy variance measurement.

   This function constructs a measurement M with the following privacy contract -
   for any two inputs x, x' that are `d_in`-close under the `input_metric`, M(x) and
   M(x') are sampled from distributions that are `d_out` apart under the
   `output_measure`. Noise scale is computed appropriately for the specified
   `noise_mechanism` such that the stated privacy property is guaranteed.

   .. note::

      `d_out` is interpreted as the "epsilon" parameter if `output_measure` is
      :class:`~.PureDP`, the "rho" parameter if `output_measure` is
      :class:`~.RhoZCDP`, and ("epsilon", "delta") if `output_measure` is
      :class:`~.ApproxDP`.

   .. note:: :class:`~.ApproxDP` budgets with delta>0 are not yet supported.

   :param input_domain: Domain of input DataFrames.
   :param input_metric: Distance metric on input DataFrames.
   :param output_measure: Desired privacy guarantee (one of :class:`~.PureDP`,
                          :class:`~.RhoZCDP`, or :class:`~.ApproxDP`).
   :param d_out: Desired distance between output distributions w.r.t. `d_in`. This is
                 interpreted as "epsilon" if output_measure is :class:`~.PureDP`, "rho" if it
                 is :class:`~.RhoZCDP`, and ("epsilon", "delta") if it is
                 :class:`~.ApproxDP`.
   :param noise_mechanism: Noise mechanism to apply.
   :param measure_column: Name to column to compute variance of.
   :param lower: Lower clipping bound for `measure_column`.
   :param upper: Upper clipping bound for `measure_column`.
   :param d_in: Distance between inputs under the `input_metric`. The returned
                measurement is guaranteed to have output distributions that are `d_out`
                apart for inputs that are `d_in` apart. Defaults to 1.
   :param groupby_transformation: If provided, this measurement returns a DataFrame with
                                  a noisy variance for each group obtained from the groupby transformation.
                                  If None, this measurement outputs a single number - the noisy variance.
   :param variance_column: If a `groupby_transformation` is supplied, this is
                           the column name to be used for noisy variance in the DataFrame
                           output by the measurement. If None, this column will be named
                           "var(<measure_column>)".
   :param keep_intermediates: If True, intermediates (noisy sum of deviations, noisy sum
                              of squared deviations and noisy count) will also be output in addition to
                              the noisy variance.
   :param sum_of_deviations_column: If a `groupby_transformation` is supplied and
                                    `keep_intermediates` is True, this is the column name to be used for
                                    intermediate sums of deviations in the DataFrame output by the measurement.
                                    If None, this column will be named "sod(<measure_column>)".
   :param sum_of_squared_deviations_column: If a `groupby_transformation` is supplied
                                            and `keep_intermediates` is True, this is the column name to be used for
                                            intermediate sums of squared deviations in the DataFrame output by the
                                            measurement. If None, this column will be named "sos(<measure_column>)".
   :param count_column: If a `groupby_transformation` is supplied and `keep_intermediates`
                        is True, this is the column name to be used for intermediate counts in the
                        DataFrame output by the measurement. If None, this column will be named
                        "count".



.. py:function:: create_standard_deviation_measurement(input_domain, input_metric, output_measure, d_out, noise_mechanism, measure_column, lower, upper, d_in = 1, groupby_transformation = None, standard_deviation_column = None, keep_intermediates = False, sum_of_deviations_column = None, sum_of_squared_deviations_column = None, count_column = None)

   Returns a noisy standard deviation measurement.

   This function constructs a measurement M with the following privacy contract -
   for any two inputs x, x' that are `d_in`-close under the `input_metric`, M(x) and
   M(x') are sampled from distributions that are `d_out` apart under the
   `output_measure`. Noise scale is computed appropriately for the specified
   `noise_mechanism` such that the stated privacy property is guaranteed.

   .. note::

      `d_out` is interpreted as the "epsilon" parameter if `output_measure` is
      :class:`~.PureDP`, the "rho" parameter if `output_measure` is
      :class:`~.RhoZCDP`, and ("epsilon", "delta") if `output_measure` is
      :class:`~.ApproxDP`.

   .. note:: :class:`~.ApproxDP` budgets with delta>0 are not yet supported.

   :param input_domain: Domain of input DataFrames.
   :param input_metric: Distance metric on input DataFrames.
   :param output_measure: Desired privacy guarantee (one of :class:`~.PureDP`,
                          :class:`~.RhoZCDP`, or :class:`~.ApproxDP`).
   :param d_out: Desired distance between output distributions w.r.t. `d_in`. This is
                 interpreted as "epsilon" if output_measure is :class:`~.PureDP`, "rho" if it
                 is :class:`~.RhoZCDP`, and ("epsilon", "delta") if it is
                 :class:`~.ApproxDP`.
   :param noise_mechanism: Noise mechanism to apply.
   :param measure_column: Name to column to compute standard deviation of.
   :param lower: Lower clipping bound for `measure_column`.
   :param upper: Upper clipping bound for `measure_column`.
   :param d_in: Distance between inputs under the `input_metric`. The returned
                measurement is guaranteed to have output distributions that are `d_out`
                apart for inputs that are `d_in` apart. Defaults to 1.
   :param groupby_transformation: If provided, this measurement returns a DataFrame with
                                  noisy standard deviations for each group obtained by applying the groupby
                                  transformation. If None, this measurement outputs a single number - the
                                  noisy standard deviation of `measure_column`.
   :param standard_deviation_column: If a `groupby_transformation` is supplied, this is
                                     the column name to be used for noisy standard deviation in the DataFrame
                                     output by the measurement. If None, this column will be named
                                     "stddev(<measure_column>)".
   :param keep_intermediates: If True, intermediates (noisy sum of deviations, noisy sum
                              of squared deviations noisy count) will also be output in addition to the
                              noisy standard deviation.
   :param sum_of_deviations_column: If a `groupby_transformation` is supplied and
                                    `keep_intermediates` is True, this is the column name to be used for
                                    intermediate sums of deviations in the DataFrame output by the measurement.
                                    If None, this column will be named "sod(<measure_column>)".
   :param sum_of_squared_deviations_column: If a `groupby_transformation` is supplied
                                            and `keep_intermediates` is True, this is the column name to be used for
                                            intermediate sums of squared_deviations in the DataFrame output by the
                                            measurement. If None, this column will be named "sos(<measure_column>)".
   :param count_column: If a `groupby_transformation` is supplied and `keep_intermediates`
                        is True, this is the column name to be used for intermediate counts in the
                        DataFrame output by the measurement. If None, this column will be named
                        "count".



.. py:function:: create_quantile_measurement(input_domain, input_metric, output_measure, d_out, measure_column, quantile, lower, upper, d_in = 1, groupby_transformation = None, quantile_column = None)

   Returns a noisy quantile measurement.

   This function constructs a measurement M with the following privacy contract -
   for any two inputs x, x' that are `d_in`-close under the `input_metric`, M(x) and
   M(x') are sampled from distributions that are `d_out` apart under the
   `output_measure`.

   .. note::

      `d_out` is interpreted as the "epsilon" parameter if `output_measure` is
      :class:`~.PureDP`, the "rho" parameter if `output_measure` is
      :class:`~.RhoZCDP`, and ("epsilon", "delta") if `output_measure` is
      :class:`~.ApproxDP`.

   .. note:: :class:`~.ApproxDP` budgets with delta>0 are not yet supported.

   :param input_domain: Domain of input DataFrames.
   :param input_metric: Distance metric on input DataFrames.
   :param output_measure: Desired privacy guarantee (one of :class:`~.PureDP`,
                          :class:`~.RhoZCDP`, or :class:`~.ApproxDP`).
   :param d_out: Desired distance between output distributions w.r.t. `d_in`. This is
                 interpreted as "epsilon" if output_measure is :class:`~.PureDP`, "rho" if it
                 is :class:`~.RhoZCDP`, and ("epsilon", "delta") if it is
                 :class:`~.ApproxDP`.
   :param measure_column: Name to column to compute quantile of.
   :param quantile: The quantile to produce.
   :param lower: Lower clipping bound for `measure_column`.
   :param upper: Upper clipping bound for `measure_column`.
   :param d_in: Distance between inputs under the `input_metric`. The returned
                measurement is guaranteed to have output distributions that are `d_out`
                apart for inputs that are `d_in` apart. Defaults to 1.
   :param groupby_transformation: If provided, this measurement returns a DataFrame with
                                  noisy quantiles for each group obtained by applying groupby.
                                  If None, this measurement outputs a single number - the noisy quantile.
   :param quantile_column: If a `groupby_transformation` is supplied, this is
                           the column name to be used for noisy quantile in the DataFrame
                           output by the measurement. If None, this column will be named
                           "q_(<quantile>)_(<measure_column>)".



.. py:function:: get_midpoint(lower, upper, integer_midpoint = False)

   Returns the midpoint of lower and upper.

   If integer_midpoint is True, the midpoint is rounded to the nearest integer using
   :func:`round`.

   .. rubric:: Examples

   >>> get_midpoint(1, 2)
   (1.5, 3/2)
   >>> get_midpoint(1, 5)
   (3.0, 3)
   >>> get_midpoint("0.2", "0.3")
   (0.25, 1/4)
   >>> get_midpoint(1, 9, integer_midpoint=True)
   (5, 5)



.. py:function:: create_partition_selection_measurement(input_domain, epsilon, delta, d_in = 1, count_column = None)

   Returns a partition selection measurement.

   A partition selection measurement created by this function will have a
   privacy guarantee such that
   ``measurement.privacy_function(d_in) = (epsilon, delta)``.

   :param input_domain: Domain of the input Spark DataFrames. Input cannot contain
                        floating point columns.
   :param epsilon: The epsilon portion of the (epsilon, delta) privacy budget that
                   you want this measurement to satisfy.
   :param delta: The delta portion of the (epsilon, delta) privacy budget that
                 you want this measurement to satisfy.
   :param d_in: The given d_in such that
                ``measurement.privacy_function(d_in) = (epsilon, delta)``.
   :param count_column: Column name for output group counts. If None, output column
                        will be named "count".



.. py:function:: create_bound_selection_measurement(input_domain, output_measure, d_out, bound_column, threshold, d_in = 1)

   Returns a bound selection measurement.

   A bound selection measurement created by this function will have a
   privacy guarantee such that
   ``measurement.privacy_function(d_in) = epsilon``.

   :param input_domain: Domain of the input Spark DataFrames.
   :param output_measure: Desired privacy guarantee.
   :param d_out: Desired distance between output distributions w.r.t. `d_in`. This is
                 interpreted as "epsilon" if output_measure is :class:`~.PureDP`, "rho" if it
                 is :class:`~.RhoZCDP`, and ("epsilon", "delta") if it is
                 :class:`~.ApproxDP`.
   :param bound_column: Column name to calculate the bounds for. The column
                        must be an integer or floating point column.
   :param threshold: The threshold for the bound selection measurement.
   :param d_in: The given d_in such that
                ``measurement.privacy_function(d_in) = epsilon``.




Classes
=======

.. list-table::

   * - :class:`.NoiseMechanism`
     - Enumerating noise mechanisms.

   
.. py:class:: NoiseMechanism

   Bases: :class:`enum.Enum`

   Enumerating noise mechanisms.






   .. py:method:: check_output_measure(self, output_measure)

      Checks if the specified output measure is supported.


   .. py:method:: supported_output_measure(self)

      Returns a list of output measures supported by this noise mechanism.


   .. py:method:: name(self)

      The name of the Enum member.


   .. py:method:: value(self)

      The value of the Enum member.






